--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "next": "^12.0.7",
     "next-react-svg": "^1.1.3",
     "react": "^17.0.2",
@@ -16,6 +17,7 @@
     "sass": "^1.46.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
     "@types/react-icons": "^3.0.0",
