feat: criando interfaces e listando os dados do usuario

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
         "prettier/prettier": "error",
         "space-before-function-paren": "off",
         "react/prop-types": "off",
+        "camelcase": "off",
         "react/react-in-jsx-scope": "off",
         "@typescript-eslint/explicit-module-boundary-types": "off"
     }
