build: adicionando regra no lint e removendo item no ignore

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     ],
     "rules": {
         "prettier/prettier": "error",
+        "multiline-ternary": "off",
         "space-before-function-paren": "off",
         "react/prop-types": "off",
         "camelcase": "off",
