--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "date-fns": "^2.28.0",
     "next": "^12.0.7",
     "next-react-svg": "^1.1.3",
     "react": "^17.0.2",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/date-fns": "^2.6.0",
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
     "@types/react-icons": "^3.0.0",
